examples/test/testpolicy12312.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12312
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key29: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key48: value38
          key12: value17
      podSelector:
        matchLabels:
          key3: value4
          key5: value0
